--- a/src/app/nav/gunler/gunler.component.html
+++ b/src/app/nav/gunler/gunler.component.html
@@ -1,3 +1,16 @@
-<p>
-  gunler works!
-</p>
+<div class="col-md-2 col-sm-12 col-xs-12 pull-right">
+    <input class="btn-success form-control pull-left " type="button" ng-click="tarihChange(5); getIlceList(selectedIl)" value="5.Gün" />
+</div>
+
+<div class="col-md-2 col-sm-12 col-xs-12 pull-right">
+    <input class="btn-success form-control pull-left " type="button" ng-click="tarihChange(4); getIlceList(selectedIl)" value="4.Gün" />
+</div>
+<div class="col-md-2 col-sm-12 col-xs-12 pull-right">
+    <input class="btn-success form-control pull-left " type="button" ng-click="tarihChange(3); getIlceList(selectedIl)"  value="3.Gün" />
+</div>
+<div class="col-md-2 col-sm-12 col-xs-12 pull-right">
+    <input class="btn-success form-control pull-left " type="button" ng-click="tarihChange(2); getIlceList(selectedIl)" value="2.Gün" />
+</div>
+<div class="col-md-2 col-sm-12 col-xs-12 pull-right">
+    <input class="btn-success form-control pull-left " type="button" ng-click="tarihChange(1); getIlceList(selectedIl)" value="1.Gün" />
+</div>              
