--- a/src/app/nav/min-nem/min-nem.component.html
+++ b/src/app/nav/min-nem/min-nem.component.html
@@ -1,4 +1,3 @@
 <div class="col-md-2 col-sm-12 col-xs-12">
-    <input class="form-control " style="float:left;" type="text" placeholder="En Düşük Nem" ng-model="nemEsik"/>
-    <span class="" style="float:left;padding-left:10px; width:10%;line-height:50%;margin-top:10px;"></span>    
+    <input class="form-control " style="float:left;" type="text" placeholder="En Düşük Nem" ng-model="nemEsik" value="30"/>
 </div>
