--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,3 +1,4 @@
+<div style="clear:both">
 <div  class="col-md-12 col-sm-12 col-xs-12">
 <span style="font-size:13px;"><img style="height:15px;" src="images/unlem.svg" /> Tablodaki verileri Excel'e Aktarmak için Chrome Kullanın</span>
     <p class="text-center">© 2018 - MNT  </p>
