tablo ve simgeler eklendi

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,20 @@
-<div style="text-align:center">
-  <h1><app-header></app-header></h1>  
+<div class="container">    
+
+<div style="text-align:center">  
+  <h1><app-header></app-header></h1>
 </div>
 
 <div class="form-control-static">  
     <app-iller></app-iller>
-    <app-min-nem></app-min-nem>  
+    <app-min-nem></app-min-nem>
     <app-gunler></app-gunler>
+    <app-excel></app-excel>
 </div>
 
+  <app-content></app-content>  
 
 <footer class="container-fluid">
 <app-footer></app-footer>
 </footer>
-
+</div>
 <router-outlet></router-outlet>
