--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -1,3 +1,42 @@
-<p>
-  content works!
-</p>
+<table class="table table-hover">
+  <thead>
+    <tr>
+      <th scope="col">İli</th>
+      <th scope="col">İlçesi</th>
+      <th scope="col">Tarih</th>
+      <th scope="col">En Düşük Sıc. (°C)</th>
+      <th scope="col">En Yüksek Sıc. (°C)</th>
+      <th scope="col">En Düşük Nem (%)</th>
+      <th scope="col">En Yüksek Nem (%)</th>
+      <th scope="col">Hadise</th>
+      <th scope="col">Rüzgar Yön (°)</th>
+      <th scope="col">Rüzgar Hız (km/sa)</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr class="table-active">
+      <th scope="row">Active</th>
+      <td>Column content</td>
+      <td>Column content</td>
+      <td>Column content</td>
+      <td>Column content</td>
+      <td>Column content</td>
+      <td>Column content</td>
+      <td>Column content</td>
+      <td>Column content</td>
+      <td>Column content</td>
+    </tr>
+    <tr class="table-primary">
+      <th scope="row">Primary</th>
+      <td>Column content</td>
+      <td>Column content</td>
+      <td>Column content</td>
+      <td>Column content</td>
+      <td>Column content</td>
+      <td>Column content</td>
+      <td>Column content</td>
+      <td>Column content</td>
+      <td>Column content</td>
+    </tr>   
+  </tbody>
+</table> 
