--- a/src/app/nav/excel/excel.component.html
+++ b/src/app/nav/excel/excel.component.html
@@ -1,3 +1,3 @@
-<p>
-  excel works!
-</p>
+<div class="col-md-1 col-sm-12 col-xs-12">
+<input type="image" class="form-control" value="submit" src="assets/icon.svg" ng-click="exportToExcel('#tableToExport')" title="Excele Aktar" />
+</div>
