--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,16 +3,15 @@
 <div style="text-align:center">  
   <h1><app-header></app-header></h1>
 </div>
-
-<div class="form-control-static">  
+  
     <app-iller></app-iller>
     <app-min-nem></app-min-nem>
     <app-gunler></app-gunler>
     <app-excel></app-excel>
-</div>
-
-  <app-content></app-content>  
-
+    
+  <div style="text-align:center">
+    <app-content></app-content>  
+  </div>  
 <footer class="container-fluid">
 <app-footer></app-footer>
 </footer>
