--- a/src/app/nav/gunler/gunler.component.css
+++ b/src/app/nav/gunler/gunler.component.css
@@ -1,3 +1,32 @@
-div {
-    float: left;
-}
+@media (min-width: 576px) and (max-width: 767.98px) { 
+        
+    div {
+        float: left;
+        width: 100px;
+    }
+ }
+
+ @media (min-width: 768px) and (max-width: 991.98px) { 
+     
+    div {
+        float:left;
+        width: 10%;
+        padding: 0 1px 0 1px;
+    }
+  }
+
+  @media (min-width: 992px) and (max-width: 1199.98px) { 
+    div {
+        float:left;             
+        width: 11%;
+    }
+   }
+   @media (min-width: 1200px) { 
+    div {
+        float:left;             
+        width: 11%;
+    }
+    }
+
+   
+
