--- a/src/app/nav/iller/iller.component.css
+++ b/src/app/nav/iller/iller.component.css
@@ -1,3 +1,25 @@
-div {
-    float: left;
-}
+@media (min-width: 576px) and (max-width: 767.98px) { 
+        
+    div {
+        float: left;
+        width: 50%;
+    }
+ }
+
+ @media (min-width: 768px) and (max-width: 991.98px) { 
+    div {
+        float: left;        
+    }
+  }
+
+  @media (min-width: 992px) and (max-width: 1199.98px) { 
+    div {
+        float:left;        
+    }
+   }
+
+   @media (min-width: 1200px) { 
+    div {
+        float:left;                     
+    }
+    }
