--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -1,3 +1,4 @@
+<div class="table-responsive-md">
 <table class="table table-hover">
   <thead>
     <tr>
@@ -14,29 +15,19 @@
     </tr>
   </thead>
   <tbody>
-    <tr class="table-active">
-      <th scope="row">Active</th>
-      <td>Column content</td>
-      <td>Column content</td>
-      <td>Column content</td>
-      <td>Column content</td>
-      <td>Column content</td>
-      <td>Column content</td>
-      <td>Column content</td>
-      <td>Column content</td>
-      <td>Column content</td>
-    </tr>
-    <tr class="table-primary">
-      <th scope="row">Primary</th>
-      <td>Column content</td>
-      <td>Column content</td>
-      <td>Column content</td>
-      <td>Column content</td>
-      <td>Column content</td>
-      <td>Column content</td>
-      <td>Column content</td>
-      <td>Column content</td>
-      <td>Column content</td>
-    </tr>   
+
+      <tr *ngFor="let user of users$">
+      <th scope="row"></th>               
+      <td routerLink="/details/{{user.id}}">{{ user.id }}></td>
+      <td routerLink="/details/{{user.id}}">{{ user.name }}></td>
+      <td routerLink="/details/{{user.id}}">{{ user.email }}></td>                  
+      <td routerLink="/details/{{user.id}}">{{ user.address.street }}></td>
+      <td routerLink="/details/{{user.id}}">{{ user.address.suite }}></td>
+      <td routerLink="/details/{{user.id}}">{{ user.address.city }}></td>
+      <td routerLink="/details/{{user.id}}">{{ user.address.zipcode }}></td>
+      <td routerLink="/details/{{user.id}}">{{ user.address.geo.lat }}></td>
+      <td routerLink="/details/{{user.id}}">{{ user.address.geo.lng }}></td>
+      </tr>
   </tbody>
 </table> 
+</div>
