--- a/src/app/nav/gunler/gunler.component.html
+++ b/src/app/nav/gunler/gunler.component.html
@@ -1,15 +1,15 @@
-<div class="col-md-2 col-sm-12 col-xs-12">    
-    <input class="btn-success form-control" type="button" ng-click="tarihChange(1); getIlceList(selectedIl)" value="1.Gün" />
+<div class="col-md-2 col-sm-12 col-xs-12">
+    <input class="btn-success form-control" type="button" (click)="tarihChange(1)" value="1.Gün" />
 </div>
-<div class="col-md-2 col-sm-12 col-xs-12">    
-    <input class="btn-success form-control" type="button" ng-click="tarihChange(2); getIlceList(selectedIl)" value="2.Gün" />
+<div class="col-md-2 col-sm-12 col-xs-12">
+    <input class="btn-success form-control" type="button" (click)="tarihChange(2)" value="2.Gün" />
 </div>
-<div class="col-md-2 col-sm-12 col-xs-12">    
-    <input class="btn-success form-control" type="button" ng-click="tarihChange(3); getIlceList(selectedIl)"  value="3.Gün" />
+<div class="col-md-2 col-sm-12 col-xs-12">
+    <input class="btn-success form-control" type="button" (click)="tarihChange(3)" value="3.Gün" />
 </div>
-<div class="col-md-2 col-sm-12 col-xs-12">    
-    <input class="btn-success form-control" type="button" ng-click="tarihChange(4); getIlceList(selectedIl)" value="4.Gün" />
+<div class="col-md-2 col-sm-12 col-xs-12">
+    <input class="btn-success form-control" type="button" (click)="tarihChange(4)" value="4.Gün" />
 </div>
-<div class="col-md-2 col-sm-12 col-xs-12">        
-<input class="btn-success form-control" type="button" ng-click="tarihChange(5); getIlceList(selectedIl)" value="5.Gün" />
+<div class="col-md-2 col-sm-12 col-xs-12">
+    <input class="btn-success form-control" type="button" (click)="tarihChange(5)" value="5.Gün" />
 </div>
