--- a/src/app/nav/iller/iller.component.html
+++ b/src/app/nav/iller/iller.component.html
@@ -6,28 +6,28 @@
           <option value="Ağrı">Ağrı</option>
           <option value="Amasya">Amasya</option>
           <option value="Ankara">Ankara</option>
-          <option value="07">Antalya</option>
-          <option value="08">Artvin</option>
-          <option value="09">Aydın</option>
-          <option value="10">Balıkesir</option>
-          <option value="11">Bilecik</option>
-          <option value="12">Bingöl</option>
-          <option value="13">Bitlis</option>
-          <option value="14">Bolu</option>
-          <option value="15">Burdur</option>
-          <option value="16">Bursa</option>
-          <option value="17">Çanakkale</option>
-          <option value="18">Çankırı</option>
-          <option value="19">Çorum</option>
-          <option value="20">Denizli</option>
-          <option value="21">Diyarbakır</option>
-          <option value="22">Edirne</option>
-          <option value="23">Elazığ</option>
-          <option value="24">Erzincan</option>
-          <option value="25">Erzurum</option>
-          <option value="26">Eskişehir</option>
-          <option value="27">Gaziantep</option>
-          <option value="28">Giresun</option>
+          <option value="Antalya">Antalya</option>
+          <option value="Artvin">Artvin</option>
+          <option value="Aydın">Aydın</option>
+          <option value="Balıkesir">Balıkesir</option>
+          <option value="Bilecik">Bilecik</option>
+          <option value="Bingöl">Bingöl</option>
+          <option value="Bitlis">Bitlis</option>
+          <option value="Bolu">Bolu</option>
+          <option value="Burdur">Burdur</option>
+          <option value="Bursa">Bursa</option>
+          <option value="Çanakkale">Çanakkale</option>
+          <option value="Çankırı">Çankırı</option>
+          <option value="Çorum">Çorum</option>
+          <option value="Denizli">Denizli</option>
+          <option value="Diyarbakır">Diyarbakır</option>
+          <option value="Edirne">Edirne</option>
+          <option value="Elazığ">Elazığ</option>
+          <option value="Erzincan">Erzincan</option>
+          <option value="Erzurum">Erzurum</option>
+          <option value="Eskişehir">Eskişehir</option>
+          <option value="Gaziantep">Gaziantep</option>
+          <option value="Giresun">Giresun</option>
           <option value="29">Gümüşhane</option>
           <option value="30">Hakkari</option>
           <option value="31">Hatay</option>
