--- a/src/app/nav/min-nem/min-nem.component.html
+++ b/src/app/nav/min-nem/min-nem.component.html
@@ -1,4 +1,5 @@
 <div class="col-md-2 col-sm-12 col-xs-12">
-    <input class="form-control " style="float:left;" type="text" placeholder="En Düşük Nem" ng-model="nemEsik" value="30"/>
+    <input (change)="NemDegisti($event)" class="form-control " style="float:left;" type="text"  value="30"/>
+    <!-- <input type="range" min="0" max="100"> -->
 </div>
 
